package Sokoban.game.enums;

public enum Block {
    OBSTACLE_BLOCK,
    GROUND_BLOCK,
    PORTAL_BLOCK,
    EYE_BLOCK,
    OPERATORONDESTINATION_BLOCK,
    EYEONDESTINATION_BLOCK,
    OPERATOR_BLOCK
}