package Sokoban.game.enums;

public enum Scenes {
    WIN_SCENE,
    START_SCENE,
    PLAY_SCENE,
    ALLLEVELSDONE_SCENE
}
